# python-project-50

./: README.md  pyproject.toml
gendiff/scripts/: gendiff.py
